# couchdb-cluster-admin

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py  tests.py
.github/workflows/: pypi.yml  tests.yml
config/: conf.example.yml
couchdb-cluster-admin/: __init__.py  copy_db_to_new_cluster.py  describe.py  doc_models.py  file_plan.py  remove_node.py  size-shards.sh  suggest_shard_allocation.py  utils.py
couchdb_cluster_admin/: __init__.py  add_replica_node.py  copy_db_to_new_cluster.py  describe.py  doc_models.py  file_plan.py  remove_node.py  replicate_db_to_new_node.py  suggest_shard_allocation.py  utils.py
docker-couchdb-cluster/: Dockerfile
test/: local.yml  test.bats
